-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0, Lustre 2.2.0
-
None
-
3
-
4828
We seem to be getting periodic outbreaks of messages that reads like this "format at cl_io.c:1551:cl_req_page_add doesn't end in newline" on console during testing.
Finally I had enough and dug a bit into it, the culprit is osc-page printing, because the message printed gets pretty long and overflows 255 bytes of allowed space (LU_CDEBUG_LINE).
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.0 to version 2.1.1 Server support for kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) 2.6.32.360....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....